[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/raw/CC Wild Words Roman.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/newgame.gd" type="Script" id=4]
[ext_resource path="res://scripts/LinkButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 959.0
margin_bottom = 520.0
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 725.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 725.0
margin_bottom = 223.0
custom_fonts/font = ExtResource( 2 )
text = "Alien Jumper"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 725.0
margin_bottom = 303.0

[node name="newgame" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 725.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.909804, 0.603922, 0.603922, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Game"
script = ExtResource( 4 )
scene_to_load = "Level1"

[node name="LinkButton2" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 725.0
margin_bottom = 60.0
focus_mode = 2
custom_colors/font_color = Color( 0.909804, 0.603922, 0.603922, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stage Select"
script = ExtResource( 5 )
scene_to_load = "levelselect"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 775.0
margin_right = 839.0
margin_bottom = 440.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 188.0
margin_right = 64.0
margin_bottom = 252.0
texture = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/newgame" to="HBoxContainer/VBoxContainer/VBoxContainer2/newgame" method="_on_newgame_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/LinkButton2" to="HBoxContainer/VBoxContainer/VBoxContainer2/LinkButton2" method="_on_ToLevelSelect_pressed"]
